--- a/index.html
+++ b/index.html
@@ -25,6 +25,29 @@
                     Professional web developer and web designer
                 </p>
 
+                <p>
+                    <i class="fa-solid fa-location-dot"></i>
+                    Nigeria
+                </p>
+
+                <p>
+                    I am full stack Developer and Graphic designer
+                </p>
+
+                <p>
+                    check out my social media link for more information
+                </p>
+                
+                <div>
+                    <button class="dev">Contact us</button>
+                </div>
+                <footer>
+                    <a href=""><i class="fa-brands fa-facebook"></i></a>
+                    <a href=""><i class="fa-brands fa-twitter"></i></a>
+                    <a href=""><i class="fa-brands fa-instagram"></i></a>
+                    <a href=""><i class="fa-brands fa-github"></i></a>
+                </footer>
+
              </div>        
         </div>
     </div>
